slight edit to HMTL and added basic structure and classes to CSS

--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./assets/css/style.css">
-    </head>
 
-    <body>
-      <main>
-        <h1>Coding Quiz Challenge</h1>
-        <p>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Coding Challenge Quiz</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+
+<body>
+
+<div class="container">
+    <main>
+        <header>
+            <h1>Coding Quiz Challenge</h1>
+        </header>
+        <p class ="questions">
             You will be presented with webdev coding questions in multiple choice format.
-            You will have 2 minutes to asnwer each question. Try to answer all that you can. 
+            You will have 2 minutes to answer all questions. Try to answer all that you can. 
         </p>
-        <p>
+        <p class="answers">
             Each incorrect answer will subtract 10 seconds from your score. Good luck! 
         </p>
-        <button>Begin Quiz</button>
-      </main>
-        
-    
-    </body>
+        <button class="confirm">Begin Quiz</button>
+    </main>
+</div>
+
+</body>
+
 </html>
