changed some initial classes to IDs instead

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <header>
             <h1>Coding Quiz Challenge</h1>
         </header>
-        <p class ="questions">
+        <p id ="questionsDefualt">
             You will be presented with webdev coding questions in multiple choice format.
             You will have 2 minutes to answer all questions. Try to answer all that you can. 
         </p>
-        <p class="answers">
+        <p id="answersDefault">
             Each incorrect answer will subtract 10 seconds from your score. Good luck! 
         </p>
         <button class="confirm">Begin Quiz</button>
