added more classes, once that will disply default and will hide, and ones that are hidden by default and will be where the questions/asnwers are displayed/

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
             You will be presented with webdev coding questions in multiple choice format.
             You will have 2 minutes to answer all questions. Try to answer all that you can. 
         </p>
+        <p id="questionsDisplay">
+            This is hidden by default and JS will use WebAPI to unhide this and display questions here.
+        </p>
         <p id="answersDefault">
             Each incorrect answer will subtract 10 seconds from your score. Good luck! 
+        </p>
+        <p id="answersDisplay">
+            This is hidden by default and JS will use WebAPI to unhide this and display clickable answers here.
         </p>
         <button class="confirm">Begin Quiz</button>
     </main>
