i forgot to link the js file to the html, fixed

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             This is hidden by default and JS will use WebAPI to unhide this and display clickable answers here.
         </p>
         <button class="confirm">Begin Quiz</button>
+        <script src="./assets/js/script.js"></script>
     </main>
 </div>
 
