figuring out the proper way to show and hide stuff with CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header>
             <h1>Coding Quiz Challenge</h1>
         </header>
-        <p id ="questionsDefualt">
+        <p id ="questionsDefault">
             You will be presented with webdev coding questions in multiple choice format.
             You will have 2 minutes to answer all questions. Try to answer all that you can. 
         </p>
