added some divs to HTML that are invisible on default and will appear with answers and clickable buttons when the game starts

--- a/index.html
+++ b/index.html
@@ -27,9 +27,28 @@
         <p id="answersDefault">
             Each incorrect answer will subtract 10 seconds from your score. Good luck! 
         </p>
-        <p id="answersDisplay">
+        <div id="answersDisplay">
             This is hidden by default and JS will use WebAPI to unhide this and display clickable answers here.
-        </p>
+            <div id="answer0">
+                <p></p>
+                <span></span>
+            </div>
+                
+            <div id="answer1">
+                <p></p>
+                <span></span>
+            </div>
+
+            <div id="answer2">
+                <p></p>
+                <span></span>
+            </div>
+
+            <div id="answer3">
+                <p></p>
+                <span></span>
+            </div>
+        </div>
         <button class="confirm">Begin Quiz</button>
         <script src="./assets/js/script.js"></script>
     </main>
