--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             Each incorrect answer will subtract 10 seconds from your score. Good luck! 
         </p>
         <div id="answersDisplay">
-            This is hidden by default and JS will use WebAPI to unhide this and display clickable answers here.
+            Choose an answer below:
             <div id="answer0">
                 <p></p>
                 <span></span>
