store the current game's score + user intials to the local storage

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             </div>
         </div>
         <button class="confirm">Begin Quiz</button>
+        <form id="scoreForm">
+            <label for="inits">Enter your initials:</label><br>
+            <input type="text" id="inits" name="inits"><br>
+            <input type="submit" value="Submit">
+          </form>
+
         <script src="./assets/js/script.js"></script>
     </main>
 </div>
