--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             This is hidden by default and JS will use WebAPI to unhide this and display questions here.
         </p>
         <p id="answersDefault">
-            Each incorrect answer will subtract 10 seconds from your score. Good luck! 
+            Each incorrect answer will subtract 10 seconds from the time limit. Good luck! 
         </p>
         <div id="answersDisplay">
             Choose an answer below:
